# AIPLAZA

./: .gitignore  Makefile  START.md  docker-compose.debug.yml  docker-compose.preprod.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  reset_passwords.py
backend/: main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_test.py
backend/admin/repository/: platform_admin_repository.py
backend/apps/: __init__.py  di.py  registry.py  service_keys.py  state_keys.py
backend/apps/_template/: README.md  __init__.py  contracts.py  dependencies.py  hooks.py  module.py
backend/apps/billing/: __init__.py  api_routes.py  catalog.py  debug_routes.py  models.py  module.py  repositories.py  router.py  runtime.py  schemas.py  service.py  subscription_proration.py  tenant_hooks.py  workflows.py
backend/apps/chat/: README.md  channel_access.py  channel_models.py  contracts.py  dependencies.py  errors.py  infrastructure.py  module.py
backend/apps/contracts/: __init__.py  conventions.py  public_api.py  service_keys.py
backend/apps/demo/: __init__.py  module.py
backend/apps/kb/: README.md  __init__.py  events.py  router.py
backend/apps/knowledge/: README_multilingual_lexicon.md  README_training_flow.md  contracts.py  dependencies.py  errors.py  events.py  infrastructure.py  ingest_jobs.py  module.py  tenant_hooks.py
backend/apps/landing/: __init__.py  module.py
backend/apps/orders/: __init__.py  module.py
backend/apps/profile/: contracts.py  dependencies.py  module.py  tenant_hooks.py
backend/apps/settings/: contracts.py  dependencies.py  module.py  tenant_hooks.py
backend/apps/traffic/: __init__.py  module.py
backend/config/: __init__.py  dev.py
backend/core/: __init__.py  di.py  testability.py
backend/core/capabilities/: __init__.py
backend/core/extensions/: __init__.py
backend/core/kernel/: __init__.py  (+5 more)
backend/lang/: __init__.py  email_templates.py  messages.py
backend/scripts/: create_app_module.py  init_db.py  migrate_legacy_plaintext_pii.py  migrate_platform_security_alerts_legacy.py  reassign_kb_data.py  reindex_knowledge_embeddings.py
backend/test_results/: london_test.txt
backend/tests/: conftest.py
(+2236 files in other folders)
